--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group Photos</title>
+    <title>2024-2025 Highlands Latin School Group Photos</title>
     <style>
         body {
             display: flex;
